# ra_edu_toolkit

./: .env.example  .env.production  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  pyproject.toml  ra_trace_viewer.html  requirements-frontend.txt  requirements.txt  run.py
.agents/skills/: gstack-autoplan  gstack-benchmark  gstack-browse  gstack-canary  gstack-careful  gstack-cso  gstack-design-consultation  gstack-design-review  gstack-document-release  gstack-freeze  gstack-guard  gstack-investigate  gstack-land-and-deploy  gstack-office-hours  gstack-plan-ceo-review  gstack-plan-design-review  gstack-plan-eng-review  gstack-qa  gstack-qa-only  gstack-retro  gstack-review  gstack-setup-browser-cookies  gstack-setup-deploy  gstack-ship  gstack-unfreeze  gstack-upgrade
.cursor/rules/: fastapi-routes.mdc  project-structure.mdc  python-standards.mdc  ra-syntax-guide.mdc  relational-algebra-core.mdc  scripts-cli.mdc  streamlit-frontend.mdc  testing-guidelines.mdc
.github/workflows/: deploy.yml
api/: app.py
api/evaluate_ra/: __init__.py  evaluator.py  ra_ast.py
api/services/: __init__.py  datasets.py  queries.py  relalg.py
assets/: operator_explanations.json  supabase_user_datasets_setup.sql
backend/: main.py
backend/core/: evaluator.py  ra_ast.py  ra_parser.py  stepper.py
backend/routes/: auth.py  databases.py  evaluation.py  llm.py  queries.py
backend/services/: __init__.py  auth.py  datasets.py  exceptions.py  grading.py  learning_progress.py  llm.py  (+4 more)
datasets/: Courses.csv  Enroll.csv  advisor.csv  department.csv  instructor.csv  section.csv  teaches.csv  time_slot.csv
docs/: ProposalOnlyWithoutReference.docx
frontend/: .gitignore  0_🏠_Home.py  app.py  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
output/: result.csv  trace.json
raedu/: __init__.py  evaluator.py  ra_ast.py  ra_parser.py  stepper.py
scripts/: dev_server.py  run_cli.py
supabase/: config.toml
ui/: RAPlayback.tsx
(+104 files in other folders)
