[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ra-edu-toolkit"
version = "1.0.0"
description = "关系代数教育工具包 - 交互式学习平台"
authors = [
    {name = "RA Education Team", email = "team@ra-edu-toolkit.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Database",
]

dependencies = [
    "fastapi[standard]>=0.100.0",
    "lark>=1.1.0",
    "pandas>=2.0.0",
    "uvicorn[standard]>=0.20.0",
    "streamlit>=1.25.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ra-edu-toolkit"
Repository = "https://github.com/your-org/ra-edu-toolkit"
Documentation = "https://ra-edu-toolkit.readthedocs.io"
Issues = "https://github.com/your-org/ra-edu-toolkit/issues"

[project.scripts]
ra-toolkit-backend = "backend.main:main"
ra-toolkit-frontend = "frontend.app:main"
ra-toolkit-cli = "scripts.run_cli:main"
ra-toolkit-dev = "scripts.dev_server:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend", "frontend", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
